torch-compiler/src/test/resources/negative/ClassWithNoAnnotations.java
package negative;

public class ClassWithNoAnnotations{
    Long id;
    String name;
    Long accountNumber;
}